<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide10Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide90Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide30Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide10Vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide90Vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"
        />
    <View
        android:id="@+id/fillView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/loginHeaderColor"
        app:layout_constraintBottom_toTopOf="@id/guide10Horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/_dimen_30_sp"
        android:fontFamily="@string/font_sans_serif"
        android:textColor="@color/loginHeaderWhite"
        app:layout_constraintBottom_toBottomOf="@id/guide10Horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/shoppingimg"
        app:layout_constraintTop_toBottomOf="@id/guide10Horizontal"
        app:layout_constraintBottom_toTopOf="@id/guide30Horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailTag"
        android:fontFamily="@string/font_sans_serif"
        android:textSize="@dimen/_dimen_18_dp"
        android:textColor="@color/emailTagColor"
        app:layout_constraintBottom_toTopOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@id/guide10Vertical"
        app:layout_constraintTop_toTopOf="@id/guide30Horizontal" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/_dimen_40_dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/little_round_boarder_box"
        app:layout_constraintTop_toBottomOf="@id/guide30Horizontal"
        app:layout_constraintStart_toEndOf="@id/guide10Vertical"
        app:layout_constraintEnd_toStartOf="@id/guide90Vertical"
        android:layout_marginTop="@dimen/_dimen_30_dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passTag"
        android:fontFamily="@string/font_sans_serif"
        android:textSize="@dimen/_dimen_18_dp"
        android:textColor="@color/emailTagColor"
        android:layout_marginTop="@dimen/_dimen_30_dp"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@id/guide10Vertical"
        android:id="@+id/passTagd"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPass"
        android:layout_width="0dp"
        android:layout_height="@dimen/_dimen_40_dp"
        android:inputType="textPassword"
        android:background="@drawable/little_round_boarder_box"
        app:layout_constraintTop_toBottomOf="@id/passTagd"
        app:layout_constraintStart_toEndOf="@id/guide10Vertical"
        app:layout_constraintEnd_toStartOf="@id/guide90Vertical"
        android:layout_marginTop="@dimen/_dimen_30_dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassTag"
        android:fontFamily="@string/font_sans_serif"
        android:textSize="@dimen/_dimen_18_dp"
        android:textColor="@color/liteOrange"
        android:layout_marginTop="@dimen/_dimen_30_dp"
        app:layout_constraintTop_toBottomOf="@+id/edtPass"
        app:layout_constraintStart_toStartOf="@id/guide10Vertical"
        android:id="@+id/forgotPassTagd"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassTagd"
        app:layout_constraintStart_toStartOf="@id/guide10Vertical"
        app:layout_constraintEnd_toEndOf="@id/guide90Vertical"
        android:layout_marginTop="@dimen/_dimen_30_dp"
        android:background="@drawable/little_round_boarder_box"
        android:text="@string/loginText"
        android:textColor="@color/loginHeaderWhite"
        android:backgroundTint="@color/loginHeaderColor"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dontHaveAccountTag"
        android:fontFamily="@string/font_sans_serif"
        android:textSize="@dimen/_dimen_18_dp"
        android:textColor="@color/liteOrange"
        android:layout_marginTop="@dimen/_dimen_30_dp"
        app:layout_constraintBottom_toBottomOf="@id/guide90Horizontal"
        app:layout_constraintStart_toStartOf="@id/guide10Vertical"
        app:layout_constraintEnd_toEndOf="@id/guide90Vertical"
        android:id="@+id/noAccountTagd"
        />

</androidx.constraintlayout.widget.ConstraintLayout>