<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.RegisterActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide10Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide90Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide30Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide10Vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide90Vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"
        />
    <View
        android:id="@+id/fillView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/loginHeaderColor"
        app:layout_constraintBottom_toTopOf="@id/guide10Horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textSize="@dimen/_dimen_30_sp"
        android:fontFamily="@string/font_sans_serif"
        android:textColor="@color/loginHeaderWhite"
        app:layout_constraintBottom_toBottomOf="@id/guide10Horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fullNameTag"
        android:text="@string/fullNameTag"
        android:fontFamily="@string/font_sans_serif"
        android:textSize="@dimen/_dimen_18_dp"
        android:layout_marginTop="@dimen/_dimen_30_dp"
        android:textColor="@color/emailTagColor"
        app:layout_constraintStart_toStartOf="@id/guide10Vertical"
        app:layout_constraintTop_toTopOf="@id/guide10Horizontal" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtfullNameRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/_dimen_40_dp"
        android:layout_marginTop="@dimen/_dimen_18_dp"
        android:background="@drawable/little_round_boarder_box"
        app:layout_constraintEnd_toStartOf="@id/guide90Vertical"
        app:layout_constraintStart_toEndOf="@id/guide10Vertical"
        app:layout_constraintTop_toBottomOf="@+id/fullNameTag"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobileNoTag"
        android:fontFamily="@string/font_sans_serif"
        android:textSize="@dimen/_dimen_18_dp"
        android:textColor="@color/emailTagColor"
        android:layout_marginTop="@dimen/_dimen_18_dp"
        app:layout_constraintTop_toBottomOf="@+id/edtfullNameRegister"
        app:layout_constraintStart_toStartOf="@id/guide10Vertical"
        android:id="@+id/mobileNoTag"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtMobileNumberRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/_dimen_40_dp"
        android:inputType="phone"
        android:background="@drawable/little_round_boarder_box"
        app:layout_constraintTop_toBottomOf="@+id/mobileNoTag"
        app:layout_constraintStart_toEndOf="@id/guide10Vertical"
        app:layout_constraintEnd_toStartOf="@id/guide90Vertical"
        android:layout_marginTop="@dimen/_dimen_18_dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailIdTag"
        android:fontFamily="@string/font_sans_serif"
        android:textSize="@dimen/_dimen_18_dp"
        android:textColor="@color/emailTagColor"
        android:layout_marginTop="@dimen/_dimen_18_dp"
        app:layout_constraintTop_toBottomOf="@+id/edtMobileNumberRegister"
        app:layout_constraintStart_toStartOf="@id/guide10Vertical"
        android:id="@+id/emailIdTag"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmailIdRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/_dimen_40_dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/little_round_boarder_box"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@id/guide90Vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guide10Vertical"
        app:layout_constraintTop_toBottomOf="@+id/emailIdTag" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passTag"
        android:fontFamily="@string/font_sans_serif"
        android:textSize="@dimen/_dimen_18_dp"
        android:textColor="@color/emailTagColor"
        android:layout_marginTop="@dimen/_dimen_30_dp"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailIdRegister"
        app:layout_constraintStart_toStartOf="@id/guide10Vertical"
        android:id="@+id/passTagd"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/_dimen_40_dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/little_round_boarder_box"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@id/guide90Vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guide10Vertical"
        app:layout_constraintTop_toBottomOf="@id/passTagd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordRegister"
        app:layout_constraintStart_toStartOf="@id/guide10Vertical"
        app:layout_constraintEnd_toEndOf="@id/guide90Vertical"
        android:layout_marginTop="@dimen/_dimen_30_dp"
        android:background="@drawable/little_round_boarder_box"
        android:text="@string/registerButton"
        android:textColor="@color/loginHeaderWhite"
        android:backgroundTint="@color/loginHeaderColor"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haveAccountTag"
        android:fontFamily="@string/font_sans_serif"
        android:textSize="@dimen/_dimen_18_dp"
        android:textColor="@color/emailTagColor"
        android:layout_marginTop="@dimen/_dimen_30_dp"
        app:layout_constraintBottom_toBottomOf="@id/guide90Horizontal"
        app:layout_constraintStart_toStartOf="@id/guide10Vertical"
        app:layout_constraintEnd_toEndOf="@id/guide90Vertical"
        android:id="@+id/haveAccountTagd"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/font_sans_serif"
        android:textSize="@dimen/_dimen_18_dp"
        android:textColor="@color/errColor"
        android:layout_marginTop="@dimen/_dimen_18_dp"
        app:layout_constraintTop_toBottomOf="@id/guide90Horizontal"
        app:layout_constraintStart_toStartOf="@id/guide10Vertical"
        app:layout_constraintEnd_toEndOf="@id/guide90Vertical"
        android:id="@+id/errMsgRegister"
        />
</androidx.constraintlayout.widget.ConstraintLayout>